# lacapsule

./: .gitignore  README.md
week_1/day_1/ceasercipher/: cipher.txt  message.txt
week_1/day_1/countlines/: numberLines.txt
week_1/day_1/dataprocessing/: data.txt  sortedLogs.txt  testLogs.txt
week_1/day_1/errorlogs/: warningLogs.txt
week_1/day_1/filesandfolders/: command.txt
week_1/day_1/filesorting/: command.txt  largest.txt
week_1/day_1/findcommand/: df.txt  ifconfig.txt  ip.txt  ps.txt
week_1/day_1/free/: free.txt
week_1/day_1/ip_addr/: command.txt
week_1/day_1/mergefiles/: globalLogs.txt
week_1/day_1/myalias/: ls.txt
week_1/day_1/playwithpipelines/: command.txt
week_1/day_1/scores/: average.txt  command.txt  results.txt  scores.txt
week_1/day_2/autobackup/: cronfile  mon_backup.sh
week_1/day_2/conditions_and_loops/: conditions.sh  loops.sh
week_1/day_2/countfiles/: countFiles.sh
week_1/day_2/easypermissions/: easyOwner.sh  easyPermissions.sh
week_1/day_2/echoecho/: interact.sh  myscript.sh
week_1/day_2/folder_or_file/: checkType.sh
week_1/day_2/i_love_pets/: pets.sh
week_1/day_4/course/: subprocess_test.py
week_1/day_5/: random
week_1/day_5/django-project/: pyproject.toml
week_1/day_5/django-project/src/django_project/: asgi.py  settings.py  wsgi.py
week_2/day_07/: commands.md  gns3_install.sh
week_2/day_08/: commands.md
week_2/day_09/: commands.md
week_4/day_17/: .gitlab-ci.yml  README.md  index.html  package.json  server.js  sonar-project.properties
week_8/: infra.drawio  lambda-backup.drawio  monigoring.drawio
(+228 files in other folders)
